--- a/test/domtests.html
+++ b/test/domtests.html
@@ -101,7 +101,7 @@
     <li><a href="layouttests.html">Layout Tests</a></li>
   </ul>
 	<div id="mocha"></div>
-  <script src="../dist/prototype.min.js"></script>
+  <script src="../dist/prototype.js"></script>
   <script src="mocha.js"></script>
   <script src="proclaim.js"></script>
 	<script>mocha.setup('tdd')</script>
